fix: fee on amount change (#72)
* fix: fee on amount change

--- a/src/index.scss
+++ b/src/index.scss
@@ -282,7 +282,9 @@ h2 {
 
 .checkbox {
   width: 15px;
+  min-width: 15px;
   height: 15px;
+  min-height: 15px;
   overflow: hidden;
   border: 1px solid var(--input-border-focus);
   border-radius: 2px;
