--- a/src/components/DataList/DataList.scss
+++ b/src/components/DataList/DataList.scss
@@ -633,6 +633,10 @@
     &-wrapper {
       min-width: 505px;
 
+      &.external {
+        min-width: auto;
+      }
+
       &.open {
         .add-contact-button {
           top: 35px;
