--- a/src/components/Transaction/Transaction.scss
+++ b/src/components/Transaction/Transaction.scss
@@ -234,6 +234,10 @@
 
   &.unlock {
     background-image: url(../../images/lock.svg);
+
+    &.locked {
+      background-image: url(../../images/lock_disabled.svg);
+    }
   }
 
   &.Deposit {
