#146 fix: spinner wrapper added (#176)
* fix: #146 spinner wrapper added

--- a/src/components/Spinner/Spinner.scss
+++ b/src/components/Spinner/Spinner.scss
@@ -12,6 +12,10 @@
   text-align: center;
   background: var(--transparent);
 }
+
+.spinner-wrapper {
+  min-height: 32px;
+}
     
 .spinner {
   position: relative;
