--- a/src/index.scss
+++ b/src/index.scss
@@ -874,6 +874,10 @@ h2 {
     border: none;
     cursor: pointer;
 
+    &.marginless {
+      margin: 0;
+    }
+
     &.margin {
       display: block;
       margin: 15px auto 25px;
