--- a/src/components/Wallets/Wallets.scss
+++ b/src/components/Wallets/Wallets.scss
@@ -39,6 +39,7 @@
       width: 32px;
       min-width: 32px;
       height: 32px;
+      line-height: 1px;
       background-color: var(--transparent);
       background-image: url(../../images/mdi_file_copy.svg);
       background-repeat: no-repeat;
