--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -1,24 +1,21 @@
-.coinbasewallet {
-  &-logo {
-    width: 86px;
-    height: 86px;
-    margin: 0 auto;
-    background-image: url(../../images/coinbase.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
-  }
+// wallets logo
+div[class$="logo"] {
+  width: 86px;
+  height: 100%;
+  min-height: 86px;
+  margin: 10px auto 30px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+
+.coinbasewallet-logo {
+  background-image: url(../../images/coinbase.png);
 }
 
 .metamask {
   &-logo {
-    width: 86px;
-    height: 86px;
-    margin: 10px auto 30px;
     background-image: url(../../images/metamask.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
   }
 
   & > .title-connecting {
@@ -37,11 +34,20 @@
   }
 }
 
-.WalletConnect-logo {
-  width: 100px;
-  height: 100px;
-  background-image: url(/images/walletconnect.png);
-  background-size: contain;
+.walletconnect-logo {
+  background-image: url(../../images/walletconnect.png);
+}
+
+.portis-logo {
+  background-image: url(../../images/portis.png);
+}
+
+.fortmatic-logo {
+  background-image: url(../../images/fortmatic.png);
+}
+
+.burnerwallet-logo {
+  background-image: url(../../images/burnerwallet.png);
 }
 
 .modal {
