--- a/src/components/DataList/DataList.scss
+++ b/src/components/DataList/DataList.scss
@@ -504,6 +504,10 @@
       color: var(--dark-color);
       font-size: var(--xl-font-size);
       line-height: var(--xl-font-size);
+      &.not-number {
+        font-size: var(--sm-font-size);
+        line-height: var(--sm-font-size);
+      }
     }
   }
 
